# aoc-2022-ocaml

day1/: aoc.opam  dune-project
day1/lib/: dune
day1/test/: helloworld.ml
day2/: dune  main.ml
day3/: dune  main.ml
day4/: dune  main.ml
lib/: aoc1.ml
test/: dune
