(lang dune 3.10)

(name aoc)

(generate_opam_files true)

(source
 (github dmanchon/aoc-2022-ocaml))

(authors "dmanchon")

(license LICENSE)


(package
 (name aoc)
 (synopsis "Learn Ocaml by coding AOC")
 (depends ocaml dune)
 (tags
  (ocaml aoc 2022)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
